<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My Heart Sound</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_splash">My Heart Sound</string>
    <string name="title_activity_frequency_scanner">Frequency Scanner</string>
    <string name="title_activity_blood_pressure">Heart Sound</string>
    <string name="title_activity_instruction">Instructions</string>
    <string name="action_settings">Settings</string>
    <string name="instructionActivityExitButtonText">CLOSE</string>
    <string name="replay_label">Replay</string>
    <string name="start_button">Start</string>
    <string name="stop_button">Stop</string>
    <string name="nofps">0 fps</string>
    <string name="defaultText">This here be some wonderful instruction type of text fer yer viewin plesure</string>
    <string name="nsl_name">Network Security Lab</string>
    <string name="univ_name">University of North Texas</string>
    <string name="exp_sys_pressure">Expected Systolic Pressure</string>
    <string name="exp_dia_pressure">Expected Diastolic Pressure</string>
    <string name="notes_text">Notes</string>
    <string name="dummy_text_layout">This here be some wonderful instruction type of text fer yer viewin plesure</string>
    <string name="hb_detect_title">Heartbeat Detection</string>
    <string name="title_activity_announcer">AnnouncerActivity</string>
    <string name="steth_red">Mic red</string>
    <string name="cam_red">Cam red</string>
    <string name="finger_camera">Place your finger over the camera</string>
    <string name="place_steth">Place the stethoscope over your heart.</string>
    <string name="my_love_text">I love you</string>
    <string name="split_analysis">Murmur Analysis</string>
    <string name="finding_steth_text">Please wait while we find the correct frequencies for auscultation</string>
    <string name="heart_auscultation_text">Select the auscultation area from the above image and click next</string>
    <string name="recording_finished">Recording Finished</string>
    <string name="recordingProgressText">TextView</string>

    <string-array name="Modules">
        <item>Heart Sound Analysis</item>
        <item>Lung Sound Analysis</item>
    </string-array>

    <string-array name="lung_auscultation">
        <item>ONE</item>
        <item>TWO</item>
        <item>THREE</item>
        <item>FOUR</item>
        <item>FIVE</item>
        <item>SIX</item>
        <item>SEVEN</item>
    </string-array>
    <string-array name="lung_anterior">
        <item>1 trachea</item>
        <item>2 upper right lung field</item>
        <item>3 upper left lung field</item>
        <item>4 middle right lung field</item>
        <item>5 middle left lung field</item>
        <item>6 lower right lung field</item>
        <item>7 lower left lung field</item>
    </string-array>

    <string-array name="lung_posterior">
        <item>0 upper left lung field</item>
        <item>1 upper right lung field</item>
        <item>2 middle right lung field</item>
        <item>3 middle left lung field</item>
        <item>4 lower left lung field</item>
        <item>5 lower right lung field</item>
        <item>6 right costophrenic angle</item>
        <item>7 left costophrenic angle</item>
    </string-array>

</resources>